kubernetes/clusters/home/infrastructure/networking/headscale/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale-nodeport
  namespace: headscale
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30800
      protocol: TCP
