kubernetes/clusters/home/infrastructure/networking/headscale/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale
  namespace: headscale
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`headscale.syslabs.dev`)
      kind: Rule
      services:
        - name: headscale
          port: 8080
